--- a/Sem4/WWW/Lista1/style.css
+++ b/Sem4/WWW/Lista1/style.css
@@ -1,4 +1,3 @@
-/* Resetowanie domyślnych stylów przeglądarki */
 * {
     margin: 0;
     padding: 0;
@@ -91,11 +90,11 @@ img{
     text-align:center;
     display:flex;
     padding:0px;
-    width: 100%; /* Dodajemy szerokość 100% */
+    width: 100%;
     height: auto;
 }
 pre {
-    overflow-x: auto; /* Dodajemy przewijanie poziome */
+    overflow-x: auto; 
 
 }
 a {
@@ -112,6 +111,15 @@ aside a:hover{
     flex-direction: column;
     gap: 20px;
 
+}
+.gallery-image {
+    width: 100%;
+    max-width: 600px;
+    height: auto;
+    display: block;
+    margin: 0 auto 20px auto;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 @media (min-width: 768px) {
     .zainteresowania {
